// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`skeleton basic should render dummy data when predicate returns true 1`] = `
<div
  className="src__StyledWrappedComponent-u89yob-0 eBORVg"
>
  <h1>
    __________
  </h1>
  <p>
    ___________
  </p>
</div>
`;

exports[`skeleton basic should render real data when predicate returns false 1`] = `
<div>
  <h1>
    Eren Yeager
  </h1>
  <p>
    Attack on Titan protagonist
  </p>
</div>
`;
